# StaticThreads

./: .gitignore  CMakeLists.txt
SingletonWithThread/: CMakeLists.txt
SingletonWithThread/src/: SingletonWithThread.cpp  SingletonWithThread.h  dllexport.h
StaticThreads/: CMakeLists.txt  main.cpp
